2010-03-14 max zipmap entries and max zipmap value parameters added into INFO output
2010-03-14 HDEL and some improvement in DEBUG OBJECT command
2010-03-14 Append only file support for hashes
2010-03-13 utility to check rdb files for unprocessable opcodes
2010-03-12 A minor fix and a few debug messages removed
2010-03-12 Applied the replication bug patch provided by Jeremy Zawodny, removing temp file collision after the slave got the dump.rdb file in the SYNC stage
2010-03-11 Fix for HGET against non Hash type, debug messages used to understand a bit better a corrupted rdb file
2010-03-09 fix: use zmalloc instead of malloc
2010-03-09 Merged zsetops branch from Pietern
2010-03-09 Merged ZREMBYRANK from Pietern
2010-03-09 Merged ZREVRANK from Pietern
2010-03-09 use a struct to store both a dict and its weight for ZUNION and ZINTER, so qsort can be applied
2010-03-09 Hash auto conversion from zipmap to hash table, type fixed for hashes, hash loading from disk
2010-03-09 replaced ZMERGE by ZUNION and ZINTER. note: key preloading by the VM does not yet work
2010-03-08 Hashes saving / fixes
2010-03-08 use ZMERGE as starting point
2010-03-07 HSET fixes, now the new pointer is stored back in the object pointer field
2010-03-07 added ZREVRANK
2010-03-06 Fix for replicaiton with over 2GB dump file initial SYNC stage
2010-03-06 first implementation of HSET/HSET. More work needed
2010-03-05 zipmaps functions to get, iterate, test for existence. Initial works for Hash data type
2010-03-04 redis-benchmark now implements Set commands benchmarks
2010-03-04 zipmap iteration code
2010-03-04 moved code to delete a single node from a zset to a separate function
2010-03-04 rename zslDeleteRange to zslDeleteRangeByScore (to differentiate between deleting using score or rank)
2010-03-04 use 1-based rank across zsl*Rank functions consistently
2010-03-04 implemented ZREMBYRANK
2010-03-04 A fix for initialization of augmented skip lists